--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             <p>
               <strong>Shanghai Jiao Tong University</strong>, China, from Sep. 2016 to present<br>
               Department of Computer Science & Zhiyuan College
+              Major GAP: 92.1/100 (3.93/4.0)
             </p>
             <!--<p>
               <strong>Cornell University</strong>, USA, from Jun. 2017 to Aug. 2017<br>
@@ -116,7 +117,7 @@
         <tbody><tr>
           <td width="100%" valign="middle">
             <heading>Research Interests</heading>
-            <p>My current research interests span theoretical topics including network science, performance modeling, algorithm and optimization. I am also interested in applications of these areas, particularly those pertaining to networked and distributed systems.
+            <p>My current research interests span network science, performance modeling, algorithm and optimization. Equally, I am also interested in applications of these areas, particularly those pertaining to networked and distributed systems.
             <!--
             :</p>
             <ul>
@@ -315,10 +316,10 @@
               <strong>Zhiyuan College Honors Scholarship</strong>, Shanghai Jiao Tong University, 2017 - 2019
             </p>
             <p>
-              <strong>Chinese University Student Computer Design Competition, the ﬁrst price</strong>, Ministry of Education of China, 2019
+              <strong>Academic Excellence Scholarship</strong>, Shanghai Jiao Tong University, 2017 - 2019
             </p>
             <p>
-              <strong>Academic Excellence Scholarship</strong>, Shanghai Jiao Tong University, 2017 - 2019
+              <strong>The ﬁrst price</strong>, Chinese University Student Computer Design Competition, 2019
             </p>
           </td>
         </tr>
