--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </p>-->
             <p>
               <strong>Shanghai Jiao Tong University</strong>, China, from Sep. 2016 to present<br>
-              Department of Computer Science & Zhiyuan College
+              Department of Computer Science & Zhiyuan College<br>
               Major GAP: 92.1/100 (3.93/4.0)
             </p>
             <!--<p>
