--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               Department of Computer Science
             </p>-->
             <p>
-              <strong><font size="4">Shanghai Jiao Tong University</font></strong>, China, from Sep. 2016 to present<br>
+              <strong><font size="3">Shanghai Jiao Tong University</font></strong>, China, from Sep. 2016 to present<br>
               Department of Computer Science & Zhiyuan College<br>
               Major GAP: 92.1/100 (3.93/4.0)
             </p>
@@ -163,7 +163,7 @@
           <td width="75%" valign="top">
           <p>
             <!--<a href="https://github.com/Ohyoukillkenny/Bancor-Simulator"><strong>A Simulator for Market Analysis Under Bancor Protocol</strong></a> -->
-            <strong><font size="4">Efficient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links</font>font></strong>
+            <strong><font size="3">Efficient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links</font></strong>
             <br>
             <strong>Shuaiqi Wang</strong>, Shuhao Li, Luoyi Fu, Xinbing Wang, Xiaojun Lin, Sep. 2018 - present 
             <br>
