--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <td width="75%" valign="top">
           <p>
             <!--<a href="https://github.com/Ohyoukillkenny/Bancor-Simulator"><strong>A Simulator for Market Analysis Under Bancor Protocol</strong></a> -->
-            <strong><font size="3">Efficient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links</font></strong>
+            <strong>Efficient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links</strong>
             <br>
             <strong>Shuaiqi Wang</strong>, Shuhao Li, Luoyi Fu, Xinbing Wang, Xiaojun Lin, Sep. 2018 - present 
             <br>
