--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <br>
             <strong>Shuaiqi Wang</strong>, Shuhao Li, Luoyi Fu, Xinbing Wang, Xiaojun Lin, Sep. 2018 - present 
             <br>
-            This work is advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a>, <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang</a> and <a href="https://engineering.purdue.edu/~linx/">Xiaojun Lin</a>.
+            This work is advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a>, <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang</a> and <a href="https://engineering.purdue.edu/~linx/">Xiaojun Lin</a> (Purdue).
             <br>
             </p>
 
@@ -238,9 +238,9 @@
             <a href="source/De-anonymizability of Social Network Through the Lens of Symmetry.pdf"><strong>De-anonymizability of Social Network: Through the Lens of Symmetry
 			</strong></a>
             <br>
-            Benjie Miao, <strong>Shuaiqi Wang</strong>, Luoyi Fu, Mar. 2019 - Aug. 2019
+            Benjie Miao, <strong>Shuaiqi Wang</strong>, Luoyi Fu, Xiaojun Lin, Mar. 2019 - Aug. 2019
             <br>
-            This work is advised both by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a>.
+            This work is advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a>.
             <br>
             </p>
 
