--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
           <td width="25%"><img src="./source/abstract.png" width="170" height="130"></td>
           <td width="75%" valign="top">
           <p>
-            <a href="source/De-anonymizability of Social Network Through the Lens of Symmetry.pdf"><strong>De-anonymizability of Social Network: Through the Lens of Symmetry
-			</strong></a>
+            <strong>De-anonymizability of Social Network: Through the Lens of Symmetry
+			</strong>
             <br>
             Benjie Miao, <strong>Shuaiqi Wang</strong>, Luoyi Fu, Xiaojun Lin, Mar. 2019 - Aug. 2019
             <br>
@@ -307,11 +307,26 @@
         </tbody></table>
     	-->
 
+    	<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+        <tbody><tr>
+          <td width="100%" valign="middle">
+            <heading>Other Manuscripts</heading>
+            <p>
+              X. Wu, <strong>S. Wang</strong>, Z. Hu, L. Fu and X. Wang, "De-anonymization of Social Networks: The Power of  Symmetry".
+            </p>
+            <p>
+              <a href="./source/Collective Influence Maximization in Random Networks.pdf">X. Wu, L. Fu, <strong>S. Wang</strong>, B. Jiang, X. Wang and G. Chen, "Collective Influence Boosts Influence Maximization"</a>
+            </p>
+          </td>
+        </tr>
+        </tbody></table>
+
+
         <!-- Scholarships -->
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody><tr>
           <td width="100%" valign="middle">
-            <heading>Awards and Scholarships</heading>
+            <heading>Scholarships and Awards</heading>
             <p>
               <strong>Zhiyuan College Honors Scholarship</strong>, Shanghai Jiao Tong University, 2017 - 2019
             </p>
