--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
               X. Wu, <strong>S. Wang</strong>, Z. Hu, L. Fu and X. Wang, "De-anonymization of Social Networks: The Power of  Symmetry".
             </p>
             <p>
-              <a href="./source/Collective Influence Maximization in Random Networks.pdf">X. Wu, L. Fu, <strong>S. Wang</strong>, B. Jiang, X. Wang and G. Chen, "Collective Influence Boosts Influence Maximization"</a>
+              X. Wu, L. Fu, <strong>S. Wang</strong>, B. Jiang, X. Wang and G. Chen, "<a href="./source/Collective Influence Maximization in Random Networks.pdf">Collective Influence Boosts Influence Maximization</a>"
             </p>
           </td>
         </tr>
