--- a/index.html
+++ b/index.html
@@ -148,6 +148,32 @@
         </tbody></table>
     	-->
 
+    	<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+        <tbody><tr>
+          <td width="100%" valign="middle">
+            <heading>Publications and Manuscripts</heading>
+            <p>
+            	L. Fu, <strong>S. Wang</strong>, H. Long, X. Fu, X. Wang and S. Lu, "<a href="./source/Social Network De-anonymization with Communities.pdf">On Social Network De-anonymization with Communities: A Maximum A Posteriori Perspective</a>", in <strong>IEEE/ACM Transactions on Networking</strong>. (Minor Review)
+            </p>
+            <p>
+            	L. Fu, J. Zhang, <strong>S. Wang</strong>, Y. Zhang, Z. Hu and X. Wang, "<a href="./source/De-anonymizing Social Networks with Overlapping Community Structure.pdf">De-anonymizing Social Networks with Overlapping Community Structure</a>", in <strong>IEEE/ACM Transactions on Networking</strong>. (Minor Review)
+            </p>
+            <p>
+            	<strong>S. Wang</strong>, L. Fu, S. Li, X. Wang and X. Lin, "Effcient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links". (Under Submission)
+            </p>
+            <p>
+            	B. Miao, <strong>S. Wang</strong>, L. Fu, X. Lin and X, Wang "De-anonymizability of Social Network: Through the Lens of Symmetry". (Submitted to <strong>MobiHoc 2020</strong>)
+            </p>
+            <p>
+              X. Wu, <strong>S. Wang</strong>, Z. Hu, L. Fu and X. Wang, "De-anonymization of Social Networks: The Power of  Symmetry".
+            </p>
+            <p>
+              X. Wu, L. Fu, <strong>S. Wang</strong>, B. Jiang, X. Wang and G. Chen, "<a href="./source/Collective Influence Maximization in Random Networks.pdf">Collective Influence Boosts Influence Maximization</a>".
+            </p>
+          </td>
+        </tr>
+        </tbody></table>
+
         <!-- Project -->
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody><tr>
@@ -164,8 +190,6 @@
           <p>
             <!--<a href="https://github.com/Ohyoukillkenny/Bancor-Simulator"><strong>A Simulator for Market Analysis Under Bancor Protocol</strong></a> -->
             <strong>Efficient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links</strong>
-            <br>
-            <strong>Shuaiqi Wang</strong>, Shuhao Li, Luoyi Fu, Xinbing Wang, Xiaojun Lin, Sep. 2018 - present 
             <br>
             This work is advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a>, <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang</a> and <a href="https://engineering.purdue.edu/~linx/">Xiaojun Lin</a> (Purdue).
             <br>
@@ -209,8 +233,6 @@
           <p>
             <a href="./source/Social Network De-anonymization with Communities.pdf"><strong>On Social Network De-anonymization with Communities: A Maximum A Posteriori Perspective</strong></a>
             <br>
-            Luoyi Fu, <strong>Shuaiqi Wang</strong>, Yichi Zhang, Xinzhe Fu, Xinbing Wang, Songwu Lu, Mar. 2019 - present 
-            <br>
             This work is advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a> and <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang</a>.
             <br>
             </p>
@@ -240,8 +262,6 @@
             <strong>De-anonymizability of Social Network: Through the Lens of Symmetry
 			</strong>
             <br>
-            Benjie Miao, <strong>Shuaiqi Wang</strong>, Luoyi Fu, Xiaojun Lin, Mar. 2019 - Aug. 2019
-            <br>
             This work is advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a>.
             <br>
             </p>
@@ -265,7 +285,7 @@
           <p>
             <a href="./source/De-anonymizing Social Networks with Overlapping Community Structure.pdf"><strong>De-anonymizing Social Networks with Overlapping Community Structure</strong></a>
             <br>
-            Luoyi Fu, Jiapeng Zhang, <strong>Shuaiqi Wang</strong>, Xinyu Wu, Zhongzhao Hu, Xinbing Wang, Sep. 2018 - Sep. 2019
+            This work is advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a> and <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang</a>.
             </p>
 
             <p>
@@ -308,20 +328,6 @@
         </tr>
         </tbody></table>
     	-->
-
-    	<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-        <tbody><tr>
-          <td width="100%" valign="middle">
-            <heading>Other Manuscripts</heading>
-            <p>
-              X. Wu, <strong>S. Wang</strong>, Z. Hu, L. Fu and X. Wang, "De-anonymization of Social Networks: The Power of  Symmetry".
-            </p>
-            <p>
-              X. Wu, L. Fu, <strong>S. Wang</strong>, B. Jiang, X. Wang and G. Chen, "<a href="./source/Collective Influence Maximization in Random Networks.pdf">Collective Influence Boosts Influence Maximization</a>".
-            </p>
-          </td>
-        </tr>
-        </tbody></table>
 
 
         <!-- Scholarships -->
