--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             	<strong>S. Wang</strong>, L. Fu, S. Li, X. Wang and X. Lin, "Effcient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links". (Under Submission)
             </p>
             <p>
-            	B. Miao, <strong>S. Wang</strong>, L. Fu, X. Lin and X, Wang "De-anonymizability of Social Network: Through the Lens of Symmetry". (Submitted to <strong>MobiHoc 2020</strong>)
+            	B. Miao, <strong>S. Wang</strong>, L. Fu, X. Lin and X, Wang "<a href="./source/De-anonymizability of Social Network Through the Lens of Symmetry.pdf">De-anonymizability of Social Network: Through the Lens of Symmetry</a>". (Submitted to <strong>MobiHoc 2020</strong>)
             </p>
             <p>
               X. Wu, <strong>S. Wang</strong>, Z. Hu, L. Fu and X. Wang, "De-anonymization of Social Networks: The Power of  Symmetry".
@@ -244,10 +244,11 @@
             <p>
               To fill this gap, we first derived the cost functions as metrics to quantify the structural mismappings between networks based on Maximum A Posteriori estimation. Then we further our theoretical analysis by figuring out the conditions under which minimizing the cost function can perfectly recover the correct mapping. At last we designed algorithms for the ﬁrst time to approximately minimize the proposed MAP-based cost functions. 
             </p>
-
+            <!--
             <p>
               This work is under minor review in <strong>IEEE/ACM Transactions on Networking</strong>.
             </p>
+        -->
 
           <p></p>
           </td>
@@ -259,7 +260,7 @@
           <td width="25%"><img src="./source/abstract.png" width="170" height="130"></td>
           <td width="75%" valign="top">
           <p>
-            <strong>De-anonymizability of Social Network: Through the Lens of Symmetry
+            <strong><a href="./source/De-anonymizability of Social Network Through the Lens of Symmetry.pdf">De-anonymizability of Social Network: Through the Lens of Symmetry</a>
 			</strong>
             <br>
             This work is advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a>.
@@ -269,9 +270,11 @@
             <p>            
             Although social network de-anonymization has received intensive study in network science, it remains less understood how network structural features intrinsically affect whether or not the network can be successfully de-anonymized. To find this answer, we analyzed how the symmetry of graphs will affect the de-anonymizability without any network model assumption for the ﬁrst time. Then based on the analysis, we proposed a method to quantify the de-anonymizability of given networks based on concepts of automorphism and homomorphism in the abstract algebra. Finally, we designed an approximate algorithm to estimate de-anonymizability via sampling techniques.
             </p>
+            <!--
             <p>
               This work is submitted to <strong>MobiHoc 2020</strong>.
             </p>
+        -->
 
           <p></p>
           </td>
@@ -291,9 +294,11 @@
             <p>
             Although the seedless de-anonymization problem have been explored by several previous works through various of network models, all those models cannot preciously capture the real social networks. Motivated by this, we adopt a more practical social network model parameterized by overlapping communities, which can serve as side information for de-anonymization. In this work, we derived the cost function of expected number of mismapped users based on Minimum Mean Square Error for the ﬁrst time. After simplilfying the cost function by transforming it into a weighted-edge matching problem, we ﬁgured out the approximation ratio and proposed an approximate algorithm via convex-concave optimization method. 
             </p>
+            <!--
             <p>
               This work is under minor review in <strong>IEEE/ACM Transactions on Networking</strong>.
             </p>
+        -->
           <p></p>
           </td>
         </tr>
