--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             </p>
 
             <p>
-            	In this project, I accomplished all aspects and finally summarized them in a 12-page paper with an 18-page techncial report. Moreover, this research requires strong mathematical background, and the methods involved span mathematical analysis, probability theory, discrete mathematics and so on.
+            	In this project, I accomplished all aspects and finally summarized them in a 12-page paper with a 30-page techncial report. Moreover, this research requires strong mathematical background, and the methods involved span mathematical analysis, probability theory, discrete mathematics and so on.
             </p>
 
             <!--
