--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
           <td width="100%" valign="middle">
             <heading>Publications and Manuscripts</heading>
             <p>
-            	L. Fu, <strong>S. Wang</strong>, H. Long, X. Fu, X. Wang and S. Lu, "<a href="./source/Social Network De-anonymization with Communities.pdf">On Social Network De-anonymization with Communities: A Maximum A Posteriori Perspective</a>", in <strong>IEEE/ACM Transactions on Networking</strong>. (Minor Review)
+            	L. Fu, J. Zhang, <strong>S. Wang</strong>, Y. Zhang, Z. Hu and X. Wang, "<a href="./source/De-anonymizing Social Networks with Overlapping Community Structure.pdf">De-anonymizing Social Networks with Overlapping Community Structure</a>", in <strong>IEEE/ACM Transactions on Networking</strong>.
             </p>
             <p>
-            	L. Fu, J. Zhang, <strong>S. Wang</strong>, Y. Zhang, Z. Hu and X. Wang, "<a href="./source/De-anonymizing Social Networks with Overlapping Community Structure.pdf">De-anonymizing Social Networks with Overlapping Community Structure</a>", in <strong>IEEE/ACM Transactions on Networking</strong>. (Minor Review)
+            	L. Fu, <strong>S. Wang</strong>, H. Long, X. Fu, X. Wang and S. Lu, "<a href="./source/Social Network De-anonymization with Communities.pdf">On Social Network De-anonymization with Communities: A Maximum A Posteriori Perspective</a>", in <strong>IEEE/ACM Transactions on Networking</strong>. (Minor Review)
             </p>
             <p>
             	<strong>S. Wang</strong>, L. Fu, S. Li, X. Wang and X. Lin, "Effcient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links". (Under Submission)
