--- a/index.html
+++ b/index.html
@@ -159,16 +159,16 @@
             	L. Fu, <strong>S. Wang</strong>, H. Long, X. Fu, X. Wang and S. Lu, "<a href="./source/Social Network De-anonymization with Communities.pdf">On Social Network De-anonymization with Communities: A Maximum A Posteriori Perspective</a>", in <strong>IEEE/ACM Transactions on Networking</strong>. (Minor Review)
             </p>
             <p>
-            	<strong>S. Wang</strong>, L. Fu, S. Li, X. Wang and X. Lin, "Effcient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links". (Under Submission)
+            	<strong>S. Wang</strong>, L. Fu, S. Li, X. Wang and X. Lin, "Effcient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links". (Submitted to <strong>SIGMETRICS 2020</strong>)
             </p>
             <p>
             	B. Miao, <strong>S. Wang</strong>, L. Fu, X. Lin and X, Wang "<a href="./source/De-anonymizability of Social Network Through the Lens of Symmetry.pdf">De-anonymizability of Social Network: Through the Lens of Symmetry</a>". (Submitted to <strong>MobiHoc 2020</strong>)
             </p>
             <p>
-              X. Wu, <strong>S. Wang</strong>, Z. Hu, L. Fu and X. Wang, "De-anonymization of Social Networks: The Power of  Symmetry".
+              X. Wu, L. Fu, <strong>S. Wang</strong>, B. Jiang, X. Wang and G. Chen, "<a href="./source/Collective Influence Maximization in Random Networks.pdf">Collective Influence Boosts Influence Maximization</a>". (Submitted to <strong>IEEE/ACM Transactions on Networking</strong>)
             </p>
             <p>
-              X. Wu, L. Fu, <strong>S. Wang</strong>, B. Jiang, X. Wang and G. Chen, "<a href="./source/Collective Influence Maximization in Random Networks.pdf">Collective Influence Boosts Influence Maximization</a>".
+              X. Wu, <strong>S. Wang</strong>, Z. Hu, L. Fu and X. Wang, "De-anonymization of Social Networks: The Power of  Symmetry".
             </p>
           </td>
         </tr>
