--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
           <td width="100%" valign="middle">
             <heading>More About Me</heading>
             <p>
-              Besides computer science, I am also crazy about math. I have taken or audited plenty of courses held by mathematic department, such as abstract algebra and stochastic process. Moreover, I held a seminar discussing difficult problems in mathematical analysis with a group of talented people when I was a freshman.
+              Besides computer science, I am also crazy about math. I have taken or audited plenty of courses held <a href="./source/code_1.jpg">by</a> mathematic department, such <a href="./source/code_2.jpg">as</a> abstract algebra and stochastic process. Moreover, I held a seminar discussing difficult problems in mathematical analysis with <a href="./source/code_3.jpg">a</a> group of talented people when I was a freshman.
             </p>
             <p>
               Fascinated by the free thought and infinite possibilities, I enjoy exploring the literary world. My favorite writter is Albert Camus.
