--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
             <p>Hi, my name is Shuaiqi Wang. I am now a senior student in Shanghai Jiao Tong University, China, majoring in Computer Science. I am also a member of Zhiyuan Honors Program of Engineering.
 			</p>
             <p>I have joined the Intelligent Internet of Things (<a href="http://iiot.sjtu.edu.cn/index.html">IIOT</a>) Research Center since 2017, advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a> and <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang.</p>
-            <p align="center">
-              <a href="./source/cv.pdf"><font size="4">CV</font></a>
+            <!--<p align="center">
+              <a href="./source/cv.pdf"><font size="4">CV</font></a>-->
               <!--<a href="blog/index.html">Blogs</a> &nbsp;/&nbsp;
               <a href="https://github.com/Ohyoukillkenny">GitHub</a> &nbsp;/&nbsp;
               <a href="https://www.linkedin.com/in/lingkun-kong-303295117/">LinkedIn</a>-->
-            </p>
+            <!--</p>-->
           </td>
           
         </tr>
@@ -158,9 +158,9 @@
             <p>
             	L. Fu, <strong>S. Wang</strong>, H. Long, X. Fu, X. Wang and S. Lu, "<a href="./source/Social Network De-anonymization with Communities.pdf">On Social Network De-anonymization with Communities: A Maximum A Posteriori Perspective</a>", in <strong>IEEE/ACM Transactions on Networking</strong>. (Minor Review)
             </p>
-            <p>
+            <!--<p>
             	<strong>S. Wang</strong>, L. Fu, S. Li, X. Wang and X. Lin, "Effcient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links". (Submitted to <strong>SIGMETRICS 2020</strong>)
-            </p>
+            </p>-->
             <p>
             	B. Miao, <strong>S. Wang</strong>, L. Fu, X. Lin and X, Wang "<a href="./source/De-anonymizability of Social Network Through the Lens of Symmetry.pdf">De-anonymizability of Social Network: Through the Lens of Symmetry</a>". (Submitted to <strong>MobiHoc 2020</strong>)
             </p>
@@ -175,7 +175,7 @@
         </tbody></table>
 
         <!-- Project -->
-        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+        <!--<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody><tr>
           <td width="100%" valign="middle">
             <heading>Selected Research Experiences</heading>
@@ -187,9 +187,9 @@
         <tbody><tr>
           <td width="25%"><img src="./source/WSN02.png" width="170" height="170"></td>
           <td width="75%" valign="top">
-          <p>
+          <p>-->
             <!--<a href="https://github.com/Ohyoukillkenny/Bancor-Simulator"><strong>A Simulator for Market Analysis Under Bancor Protocol</strong></a> -->
-            <strong>Efficient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links</strong>
+            <!--<strong>Efficient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links</strong>
             <br>
             This work is advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a>, <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang</a> and <a href="https://engineering.purdue.edu/~linx/">Xiaojun Lin</a> (Purdue).
             <br>
@@ -201,7 +201,7 @@
 
             <p>
             	In this project, I accomplished all aspects and finally summarized them in a 12-page paper with a 30-page techncial report. Moreover, this research requires strong mathematical background, and the methods involved span mathematical analysis, probability theory, discrete mathematics and so on.
-            </p>
+            </p>-->
 
             <!--
             <p>
@@ -221,10 +221,10 @@
             </ul>
             <br>
             </p>-->
-          <p></p>
+          <!--<p></p>
           </td>
         </tr>
-        </tbody></table>
+        </tbody></table>-->
 
         <table width="100%" align="center" border="0" cellpadding="20">
         <tbody><tr>
