--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
       }
       body,td,th,tr,p,a {
       font-family: 'Lato', Verdana, Helvetica, sans-serif;
-      font-size: 14px
+      font-size: 16px
       }
       strong {
       font-family: 'Lato', Verdana, Helvetica, sans-serif;
-      font-size: 14px;
+      font-size: 16px;
       }
       heading {
       font-family: 'Lato', Verdana, Helvetica, sans-serif;
-      font-size: 22px;
+      font-size: 24px;
       }
       name {
       font-family: 'Lato', Verdana, Helvetica, sans-serif;
@@ -44,14 +44,20 @@
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody><tr>
           <td width="35%">
-            <img src="./source/wsq1.jpg" width="100%">
+            <img src="./source/wsq1.jpg" width="75%">
           </td>
           <td width="65%" valign="middle">
             <p align="center"><name>Shuaiqi Wang</name></p>
-            <p>Hi, my name is Shuaiqi Wang. I am now a senior student in Shanghai Jiao Tong University, China, majoring in Computer Science. I am also a member of Zhiyuan Honors Program of Engineering.
+            <p>Hi, my name is Shuaiqi Wang. 
+              I am now a second year Ph.D. student in the <a href="https://www.ece.cmu.edu/">Electrical and Computer Engineering Department</a> 
+              at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>. 
+              I am fortunate to be advised by <a href="https://www.andrew.cmu.edu/user/gfanti/">Giulia Fanti</a>.
+
 			</p>
-            <p>I have joined the Intelligent Internet of Things (<a href="http://iiot.sjtu.edu.cn/index.html">IIOT</a>) Research Center since 2017, advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a> and <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang.</p>
-            <!--<p align="center">
+            <p align="center">[<a href="./source/CV.pdf">CV</a>]</p>
+            <!--<p>I have joined the Intelligent Internet of Things (<a href="http://iiot.sjtu.edu.cn/index.html">IIOT</a>) Research Center since 2017, advised by Prof. <a href="http://www.cs.sjtu.edu.cn/~fu-ly/index.html">Luoyi Fu</a> and <a href="http://www.cs.sjtu.edu.cn/~wang-xb/" target="_blank">Xinbing Wang.</p>
+            -->
+              <!--<p align="center">
               <a href="./source/cv.pdf"><font size="4">CV</font></a>-->
               <!--<a href="blog/index.html">Blogs</a> &nbsp;/&nbsp;
               <a href="https://github.com/Ohyoukillkenny">GitHub</a> &nbsp;/&nbsp;
@@ -72,15 +78,16 @@
                 <tr>
                   <td style="vertical-align: top;"><b>Email</b></td>
                   <td style="padding-left: 50px;">
-                    wangshuaiqi@sjtu.edu.cn<br>
+                    shuaiqiw at andrew.cmu.edu
+                    <br>
                   </td>
                 </tr>
                 <tr>
                   <td style="vertical-align: top;"><b>Address</b></td>
                   <td style="padding-left: 50px;">
-                    1-415 SEIEE Building,
-                    800 Dongchuan Road,
-                    Shanghai 200240, P. R. China.
+                    CIC 2225F,
+                    4720 Forbes Avenue,
+                    Pittsburgh, PA 15213, USA.
                   </td>
                 </tr>
               </tbody>
@@ -89,6 +96,30 @@
           </td>
         </tr>
         </tbody></table>
+
+
+        <!-- Research -->
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+          <tbody><tr>
+            <td width="100%" valign="middle">
+              <heading>Research Interests</heading>
+              <p>
+                I am interested in the theoretical foundations of machine learning, 
+                and the applications in privacy, security, federated learning and data sharing.
+              <!--
+              :</p>
+              <ul>
+              <li>Wireless Networks</li>
+              <li>Social Networks</li>
+              </ul>
+              <p>More broadly, I am interested in all research topics concerned with fundamental and theoretical problems in computer science, including network science, machine learning theory, computing theory and so on.
+              -->
+              </p>
+            </td>
+          </tr>
+          </tbody></table>
+
+
 
         <!-- Education -->
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
@@ -100,33 +131,18 @@
               Department of Computer Science
             </p>-->
             <p>
-              <strong><font size="3">Shanghai Jiao Tong University</font></strong>, China, from Sep. 2016 to present<br>
-              Department of Computer Science & Zhiyuan College<br>
-              Major GAP: 92.1/100 (3.93/4.0)
+              <font size="2">Ph.D. at Carnegie Mellon University, 2021 - present</font><br>
+              Electrical and Computer Engineering Department
+            </p>
+            <p>
+              <font size="2">B.S. at Shanghai Jiao Tong University, 2016 - 2020</font><br>
+              Department of Computer Science & Zhiyuan College
+              <!--Major GAP: 92.1/100 (3.93/4.0)-->
             </p>
             <!--<p>
               <strong>Cornell University</strong>, USA, from Jun. 2017 to Aug. 2017<br>
               Visiting Student, Computer Science Department     
             </p>-->
-          </td>
-        </tr>
-        </tbody></table>
-
-        <!-- Research -->
-        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-        <tbody><tr>
-          <td width="100%" valign="middle">
-            <heading>Research Interests</heading>
-            <p>My current research interests span network science, performance modeling, algorithm and optimization. Equally, I am also interested in applications of these areas, particularly those pertaining to networked and distributed systems.
-            <!--
-            :</p>
-            <ul>
-            <li>Wireless Networks</li>
-            <li>Social Networks</li>
-            </ul>
-            <p>More broadly, I am interested in all research topics concerned with fundamental and theoretical problems in computer science, including network science, machine learning theory, computing theory and so on.
-            -->
-            </p>
           </td>
         </tr>
         </tbody></table>
@@ -153,23 +169,39 @@
           <td width="100%" valign="middle">
             <heading>Publications and Manuscripts</heading>
             <p>
-            	L. Fu, J. Zhang, <strong>S. Wang</strong>, Y. Zhang, Z. Hu and X. Wang, "<a href="./source/De-anonymizing Social Networks with Overlapping Community Structure.pdf">De-anonymizing Social Networks with Overlapping Community Structure</a>", in <strong>IEEE/ACM Transactions on Networking</strong>.
+              Zinan Lin*, <strong>Shuaiqi Wang</strong>*, Vyas Sekar, and Giulia Fanti. "Distributional Privacy for Data Sharing".<br>
+              * Equal contribution.
             </p>
             <p>
-            	L. Fu, <strong>S. Wang</strong>, H. Long, X. Fu, X. Wang and S. Lu, "<a href="./source/Social Network De-anonymization with Communities.pdf">On Social Network De-anonymization with Communities: A Maximum A Posteriori Perspective</a>", in <strong>IEEE/ACM Transactions on Networking</strong>. (Minor Review)
+                <strong>Shuaiqi Wang</strong>, Jonathan Hayase, Giulia Fanti and Sewoong Oh. 
+                "<a href="https://arxiv.org/abs/2205.11736">Towards a Defense against Backdoor Attacks in Continual Federated Learning</a>". 
+                [<a href="https://github.com/wsqwsq/Towards-a-Defense-against-Backdoor-Attacks-in-Continual-Federated-Learning">code</a>]
+            </p>
+            <p>
+              <strong>Shuaiqi Wang</strong> and Giulia Fanti. "Group Testing with Inexact Reconstruction".
+            </p>
+            <p>
+              <strong>Shuaiqi Wang</strong>, Shuhao Li, Luoyi Fu and Xiaojun Lin. 
+              "<a href="./source/Efficient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links.pdf">Efficient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links</a>".
+            </p>
+            <p>
+              Benjie Miao, <strong>Shuaiqi Wang</strong>, Luoyi Fu and Xiaojun Lin. 
+              "<a href="https://dl.acm.org/doi/pdf/10.1145/3397166.3409127">De-anonymizability of Social Network: Through the Lens of Symmetry</a>".
+              <strong>MobiHoc 2020</strong>.
+            </p>
+            <p>
+            	Luoyi Fu, Jiapeng Zhang, <strong>Shuaiqi Wang</strong>, Xinyu Wu, Xinbing Wang and Guihai Chen. 
+              "<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8967164">De-anonymizing social networks with overlapping community structure</a>". 
+              <strong>IEEE/ACM Transactions on Networking</strong>.
+            </p>
+            <p>
+            	Xudong Wu, Luoyi Fu, <strong>Shuaiqi Wang</strong>, Bo Jiang, Xinbing Wang and Guihai Chen. 
+              "<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9465739">Collective Influence Maximization in Mobile Social Networks</a>". 
+              <strong>IEEE Transactions on Mobile Computing</strong>.
             </p>
             <!--<p>
             	<strong>S. Wang</strong>, L. Fu, S. Li, X. Wang and X. Lin, "Effcient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links". (Submitted to <strong>SIGMETRICS 2020</strong>)
             </p>-->
-            <p>
-            	B. Miao, <strong>S. Wang</strong>, L. Fu, X. Lin and X, Wang "<a href="./source/De-anonymizability of Social Network Through the Lens of Symmetry.pdf">De-anonymizability of Social Network: Through the Lens of Symmetry</a>". (Submitted to <strong>MobiHoc 2020</strong>)
-            </p>
-            <p>
-              X. Wu, L. Fu, <strong>S. Wang</strong>, B. Jiang, X. Wang and G. Chen, "<a href="./source/Collective Influence Maximization in Random Networks.pdf">Collective Influence Boosts Influence Maximization</a>". (Submitted to <strong>IEEE/ACM Transactions on Networking</strong>)
-            </p>
-            <p>
-              X. Wu, <strong>S. Wang</strong>, Z. Hu, L. Fu and X. Wang, "De-anonymization of Social Networks: The Power of  Symmetry".
-            </p>
           </td>
         </tr>
         </tbody></table>
@@ -226,6 +258,7 @@
         </tr>
         </tbody></table>-->
 
+        <!--
         <table width="100%" align="center" border="0" cellpadding="20">
         <tbody><tr>
           <td width="25%"><img src="./source/TON0.png" width="170" height="118"></td>
@@ -244,11 +277,6 @@
             <p>
               To fill this gap, we first derived the cost functions as metrics to quantify the structural mismappings between networks based on Maximum A Posteriori estimation. Then we further our theoretical analysis by figuring out the conditions under which minimizing the cost function can perfectly recover the correct mapping. At last we designed algorithms for the ﬁrst time to approximately minimize the proposed MAP-based cost functions. 
             </p>
-            <!--
-            <p>
-              This work is under minor review in <strong>IEEE/ACM Transactions on Networking</strong>.
-            </p>
-        -->
 
           <p></p>
           </td>
@@ -270,11 +298,6 @@
             <p>            
             Although social network de-anonymization has received intensive study in network science, it remains less understood how network structural features intrinsically affect whether or not the network can be successfully de-anonymized. To find this answer, we analyzed how the symmetry of graphs will affect the de-anonymizability without any network model assumption for the ﬁrst time. Then based on the analysis, we proposed a method to quantify the de-anonymizability of given networks based on concepts of automorphism and homomorphism in the abstract algebra. Finally, we designed an approximate algorithm to estimate de-anonymizability via sampling techniques.
             </p>
-            <!--
-            <p>
-              This work is submitted to <strong>MobiHoc 2020</strong>.
-            </p>
-        -->
 
           <p></p>
           </td>
@@ -294,15 +317,11 @@
             <p>
             Although the seedless de-anonymization problem have been explored by several previous works through various of network models, all those models cannot preciously capture the real social networks. Motivated by this, we adopt a more practical social network model parameterized by overlapping communities, which can serve as side information for de-anonymization. In this work, we derived the cost function of expected number of mismapped users based on Minimum Mean Square Error for the ﬁrst time. After simplilfying the cost function by transforming it into a weighted-edge matching problem, we ﬁgured out the approximation ratio and proposed an approximate algorithm via convex-concave optimization method. 
             </p>
-            <!--
-            <p>
-              This work is under minor review in <strong>IEEE/ACM Transactions on Networking</strong>.
-            </p>
-        -->
           <p></p>
           </td>
         </tr>
         </tbody></table>
+      -->
 
         
         
@@ -339,7 +358,13 @@
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
         <tbody><tr>
           <td width="100%" valign="middle">
-            <heading>Scholarships and Awards</heading>
+            <heading>Honors and Awards</heading>
+            <p>
+              <strong>Carnegie Institute of Technology Dean's Fellow</strong>, Carnegie Mellon University, 2021
+            </p>
+            <p>
+              <strong>Zhiyuan Distinguish Scholarship</strong>, Shanghai Jiao Tong University, 2020
+            </p>
             <p>
               <strong>Zhiyuan College Honors Scholarship</strong>, Shanghai Jiao Tong University, 2017 - 2019
             </p>
@@ -347,7 +372,7 @@
               <strong>Academic Excellence Scholarship</strong>, Shanghai Jiao Tong University, 2017 - 2019
             </p>
             <p>
-              <strong>The ﬁrst price</strong>, Chinese University Student Computer Design Competition, 2019
+              <strong>The first price</strong>, Chinese University Student Computer Design Competition, 2019
             </p>
           </td>
         </tr>
@@ -376,11 +401,12 @@
         <tbody><tr>
           <td width="100%" valign="middle">
             <heading>More About Me</heading>
-            <p>
+            <!--<p>
               Besides computer science, I am also crazy about math. I have taken or audited plenty of courses held by mathematic department, such as abstract algebra and stochastic process. Moreover, I held a seminar discussing difficult problems in mathematical analysis with a group of talented people when I was a freshman.
-            </p>
+            </p>-->
             <p>
-              Fascinated by the free thought and infinite possibilities, I enjoy exploring the literary world. My favorite writter is Albert Camus.
+              Fascinated by the free thought and infinite possibilities, I enjoy exploring the literary world. 
+              My favorite writters are Jorge Luis Borges and Albert Camus.
             </p>
           </td>
         </tr>
