--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
           <td width="100%" valign="middle">
             <heading>Publications and Manuscripts</heading>
             <p>
-              Zinan Lin*, <strong>Shuaiqi Wang</strong>*, Vyas Sekar, and Giulia Fanti. "Distributional Privacy for Data Sharing".<br>
+              Zinan Lin*, <strong>Shuaiqi Wang</strong>*, Vyas Sekar, and Giulia Fanti. "Distributional Privacy for Data Sharing".
+              <strong>NeurIPS 2022 SyntheticData4ML</strong>.<br>
               * Equal contribution.
             </p>
             <p>
