--- a/index.html
+++ b/index.html
@@ -169,14 +169,30 @@
           <td width="100%" valign="middle">
             <heading>Publications and Manuscripts</heading>
             <p>
-              Zinan Lin*, <strong>Shuaiqi Wang</strong>*, Vyas Sekar, and Giulia Fanti. "Distributional Privacy for Data Sharing".
-              <strong>NeurIPS 2022 SyntheticData4ML</strong>.<br>
+              <strong>Shuaiqi Wang</strong>, Zinan Lin and Giulia Fanti. 
+              "Statistic Maximal Leakage".
+              <strong>ISIT 2024</strong>.
+            </p>
+            <p>
+              <strong>Shuaiqi Wang</strong>, Rongzhe Wei, Mohsen Ghassemi, Eleonora Kreačić and Vamsi K. Potluru. 
+              "<a href="https://arxiv.org/pdf/2405.13804">Guarding Multiple Secrets: Enhanced Summary Statistic Privacy for Data Sharing</a>".
+            </p>
+            <p>
+              Ronghao Ni, Zinan Lin, <strong>Shuaiqi Wang</strong> and Giulia Fanti. 
+              "<a href="https://arxiv.org/pdf/2312.06786">Mixture-of-Linear-Experts for Long-term Time Series Forecasting</a>".
+              <strong>AISTATS 2024</strong>.
+            </p>
+            <p>
+              Zinan Lin*, <strong>Shuaiqi Wang</strong>*, Vyas Sekar, and Giulia Fanti. 
+              "<a href="https://arxiv.org/pdf/2303.02014"></a>Distributional Privacy for Data Sharing</a>".
+              <strong>IEEE Journal on Selected Areas in Information Theory, NeurIPS 2022 SyntheticData4ML</strong>.<br>
               * Equal contribution.
             </p>
             <p>
                 <strong>Shuaiqi Wang</strong>, Jonathan Hayase, Giulia Fanti and Sewoong Oh. 
                 "<a href="https://arxiv.org/abs/2205.11736">Towards a Defense against Backdoor Attacks in Continual Federated Learning</a>". 
                 [<a href="https://github.com/wsqwsq/Towards-a-Defense-against-Backdoor-Attacks-in-Continual-Federated-Learning">code</a>]
+                <strong>Transactions on Machine Learning Research</strong>.
             </p>
             <!--<p>
               <strong>Shuaiqi Wang</strong> and Giulia Fanti. "Group Testing with Inexact Reconstruction".
