--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </p>
             <p>
               Zinan Lin*, <strong>Shuaiqi Wang</strong>*, Vyas Sekar, and Giulia Fanti. 
-              "<a href="https://arxiv.org/pdf/2303.02014"></a>Distributional Privacy for Data Sharing</a>".
+              "<a href="https://arxiv.org/pdf/2303.02014"></a>Summary Statistic Privacy in Data Sharing</a>".
               <strong>IEEE Journal on Selected Areas in Information Theory, NeurIPS 2022 SyntheticData4ML</strong>.<br>
               * Equal contribution.
             </p>
